# Spinal_HUB75

./: .gitignore  .gitmodules  hub_top.gtkw
ArtFrame/: .gitignore  CMakeLists.txt  artframe
ArtFrame/src/: draw.c  draw.h  main.c  main_old.c  mpsse.h  sim.c  sim.h
UPduino3/: Makefile  upduino.pcf
data/: .gitignore
hw/spinal/hub75/: Config.scala  Sim.scala  Top_ICE40.scala  hub75.scala
programmer/: CMakeLists.txt  main.c
programmerSPI/: CMakeLists.txt
programmerSPI/src/: main.c
